[project]
name = "dochub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "celery>=5.5.1",
    "crispy-bootstrap5>=2025.4",
    "django>=3",
    "django-compressor>=4.5.1",
    "django-crispy-forms>=2.3",
    "django-environ>=0.12.0",
    "django-mptt>=0.17.0",
    "django-pipeline>=4.0.0",
    "furl>=2.1.4",
    "html5lib>=1.1",
    "jsonfield>=3.1.0",
    "pillow>=11.1.0",
    "pygments>=2.19.1",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "python-magic>=0.4.27",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "types-python-slugify>=8.0.2.20240310",
    "types-pyyaml>=6.0.12.20250402",
    "types-requests>=2.32.0.20250328",
    "whitenoise[brotli]>=6.9.0",
    "sentry-sdk>=2.25.1",
    "boto3>=1.37.29",
    "django-jsonfield>=1.4.1",
    "django-jsonfield-compat>=0.4.4",
    "django-storages>=1.14.6",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.6",
    "python-memcached>=1.62",
    "redis>=5.2.1",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "coolname>=2.2.0",
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=4.0",
    "honcho>=2.0.0",
    "ipython>=9.1.0",
    "isort>=6.0.1",
    "pip-tools>=7.4.1",
    "pre-commit>=4.2.0",
    "django-stubs>=5.1.3",
    "django-webtest>=1.9.13",
    "mock>=5.2.0",
    "mypy>=1.15.0",
    "pytest-django>=4.11.1",
    "responses>=0.25.7",
    "time-machine>=2.16.0",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
norecursedirs = ".venv ve ve3 static media .git node_modules"
DJANGO_SETTINGS_MODULE="www.test_settings"
addopts = "--reuse-db"
markers = """
    slow: marks tests as slow (deselect with '-m "not slow"')
    network: marks tests using the network (deselect with '-m "not network"')
    unoserver: uses unoserver for office document conversion
    webtest: http queries against localhost
    celery: uses celery tasks
    postgresql: needs a postgresql database to run
"""

[tool.ruff.lint]
select = [
    "F", "E", "W", "YTT", "B", "COM818",
    "C4", "DTZ", "T10", "EXE", "ISC",
    "ICN", "G", "PIE", "PYI", "PT",
    "SIM", "TID", "PL", "RSE", "RUF"
]
# Not now: "N", "ANN", "S", "BLE", "A", "DJ", "EM",
#          "INP", "TCH", "ERA", "PGH", "SLF",
# Partial some day ? "RET", "PTH", "TRY"
# Never ? "FBT", "D", "COM", "T20", "Q", "ARG", "PD"
ignore = [
    "E501", # Line too long
    "PT011", # `pytest.raises(Exception)` is too broad
    "SIM108", # Use ternary operator
    "SIM105", # Use `contextlib.suppress(Alarm)`
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments to function call
    "PLR0911", # Too many return statements
    "PLC1901", # if x != "" is not the same as if x
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM103", # Return the condition directly
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # imported but unused
"www/settings.py" = ["F403"] # import *` used; unable to detect undefined names
"www/test_settings.py" = ["F403"] # import *` used; unable to detect undefined names
